# amazon-letters-tutor

./: .gitignore  .vercelignore  NOTICE  README.md  index.html  pyproject.toml  vercel.json
analysis/: bezos_concepts_consolidation.md  bezos_concepts_explorer.html  bezos_concepts_inventory.md  culture_as_compounding_infrastructure_reader.html  customer_backed_empathy_reader.html  day_1_anti_complacency_reader.html  decision_quality_and_speed_reader.html  dreamy_business_filter_reader.html  free_cash_flow_discipline_reader.html  high_standards_and_craft_reader.html  invention_portfolio_reader.html  judgment_beyond_proxies_reader.html  long_term_thinking_reader.html  missionary_value_creation_reader.html  operating_system_of_excellence_reader.html  platform_and_ecosystem_design_reader.html  responsible_scale_reader.html  trust_flywheel_reader.html
analysis/scripts/: generate_deep_dive_pages.py  generate_simple_summaries.py  reader_template.html  simple_summaries.json
data/: README.md  SOURCES.md
data/extracted/: 1997.md  1998.md  1999.md  2000.md  2001.md  2002.md  2003.md  2004.md  2005.md  2006.md  2007.md  2008.md  2009.md  2010.md  2011.md  2012.md  2013.md  2014.md  2015.md  2016.md  2017.md  2018.md  2019.md  2020.md
evals/: golden_questions.json
src/amazon_letters_tutor/: chunking.py  cli.py  config.py  evals.py  extract.py  ingest.py  models.py  retrieval.py  storage.py  text_utils.py  vector.py
tests/: test_chunking.py  test_discovery.py  test_evals.py  test_extract.py  test_retrieval.py  test_storage.py
