[project]
name = "amazon-letters-tutor"
version = "0.1.0"
description = "Local-first retrieval over Jeff Bezos's Amazon shareholder letters"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pankaj Padwal", email = "padwalpankaj9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "typer>=0.26.7",
]

[project.scripts]
amz = "amazon_letters_tutor.cli:app"
amazon-letters-tutor = "amazon_letters_tutor.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
exclude = [".venv", "build", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
